--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-roboto: "Roboto", sans-serif; 
+  --font-lato: "Lato", sans-serif; 
+  --color-menuBlue: #C3EBFA;
+  --color-rightSide: #f7f8fa;
+  --color-lightBlue: #cfceff;
+  --color-lightYellow: #fae27c;
+  --color-agendaFirst: #f1f0ff;
+  --color-agendaSecond: #fdf6d8;
+  --color-agendaThird: #edf9fd;
+  --color-btn: #DF97FD;
+}
+
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +31,11 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto), Arial, Helvetica, sans-serif;
+}
+
+.css-1cmet5c-MuiInputBase-root-MuiInput-root {
+  &::before, &::after {
+    border-bottom: 0 !important;
+  }
 }
